# storage-orchestra

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
libs/as-inner-serializable/: Cargo.toml
libs/as-inner-serializable/src/: lib.rs
libs/as-result-enum/: Cargo.toml
libs/as-result-enum/src/: lib.rs
libs/extensions_loader/: Cargo.toml
libs/extensions_loader/src/: extensions.rs  hash_whitelist.rs  lib.rs  signature_verifier.rs  trusted_hashes.rs
libs/key-as-enum/: Cargo.toml
libs/key-as-enum/src/: lib.rs
libs/sample_extension/: Cargo.toml
libs/sample_extension/src/: lib.rs
libs/test-as-inner-serializable/: Cargo.toml
libs/test-as-inner-serializable/src/: main.rs
libs/test-as-result-enum/: Cargo.toml
libs/test-as-result-enum/src/: main.rs
src/: App.tsx  constants.ts  dashboard.tsx  error.tsx  layout.tsx  login.tsx  main.tsx  onboard.tsx  tauri-bindings.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/crypt/: crypt_data.rs  crypt_data_mode.rs  encoding.rs  encryption.rs  hash.rs  hmac.rs  key_derivation.rs  mod.rs  salt.rs
src-tauri/src/native_apps/: commands.rs  constants.rs  detect_active_process.rs  detect_active_process_windows.rs  mimetype.rs  mod.rs  open_file.rs  watch_process_event.rs
src-tauri/src/state/: mod.rs  provider_data.rs  state.rs  state_commands.rs  storage_provider.rs  traits.rs
src-tauri/src/state/settings/: general_behaviour.rs  mod.rs  security.rs  security_commands.rs  state_cryptdata_instances.rs  theme.rs
src-tauri/src/utility/: debounced_saver.rs  get_json_value.rs  mod.rs
src/assets/: carousel.module.css  context-menu.module.css  setting-row.module.css  tailwind.css
src/components/: create-folder-modal.tsx  google-drive-sign-in.tsx  icon-dropbox.tsx  icon-google.tsx  icon-microsoft.tsx  icon-terabox.tsx  modal-create-folder.tsx  modal-download-file.tsx  modal-error.tsx  modal-file-properties.tsx  modal-open-with-native-app.tsx  my-drive-object-card.tsx  open-with-native-app-modal.tsx  page-header.tsx  provider-icon.tsx  provider-intelligent-divider.tsx  upload-files.tsx
src/components/settings/: setting-row.tsx
src/components/settings/general/general-behaviour/: compress-files.tsx  default-page.tsx  default-to-native-app.tsx  default-to-web-editor.tsx
src/components/settings/general/theme/: font-size.tsx  theme.tsx
src/components/settings/security/passwords/: password-hint.tsx  update-password.tsx
src/dashboard/: home.tsx  layout.tsx  settings.tsx
src/dashboard/drives/: index.tsx  provider-owner.tsx
src/hooks/: use-providers.ts  use-settings.ts  use-theme.tsx
src/interfaces/: drive-file.ts  oauth-provider.ts  storage-provider.ts  storage-provider.tsx  trackable-modal-info.ts
src/providers/: constants.ts  google-provider.ts  google-provider.tsx
src/providers/oauth/: google.ts
src/utility/: cache.ts  compute-default-page.ts  dayjs.ts  ensure-is-autenticated.ts  format-bytesize.ts  google-auth.ts  load-theme.ts  notification.ts  provider-data.interface.ts  state.ts
