[package]
name = "storage-orchestra"
description = "A Tauri App"
version.workspace = true
authors.workspace = true
edition.workspace = true
default-run = "storage-orchestra"

[profile.release]
lto = true
opt-level = 3
incremental = true
debug-assertions = false
codegen-units = 1

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "storage_orchestra_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["linux-libxdo"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-oauth = "2"
tauri-plugin-http = { version = "2", features = ["json", "unsafe-headers", "rustls-tls-native-roots"] }
tauri-plugin-store = "2"
chacha20poly1305 = "0.10.1"
sha3 = "0.10.8"
hkdf = "0.12.4"
rand = "0.9.0"
base64ct = { version = "1.6.0", features = ["std"] }
tokio = { version = "1.43.0", features = ["full"] }
key-as-enum = { path = "../libs/key-as-enum" }
as-result-enum = { path = "../libs/as-result-enum" }
as-inner-serializable = { path = "../libs/as-inner-serializable" }
async-trait = "0.1.85"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde", "serde_json", "tokio"] }
specta-typescript = "0.0.9"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
once_cell = "1.20.2"
educe = "0.6.0"
hmac = "0.12.1"
tauri-plugin-upload = "2"
tauri-plugin-shell = "2"
sysinfo = "0.33.1"
windows = { version = "0.51", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Wdk_Foundation",
    "Wdk_System_SystemInformation"
] }
windows-targets = "0.48.5"
futures-util = "0.3.31"
tokio-util = { version = "0.7.13", features = ["full"] }
extensions_loader = { path = "../libs/extensions_loader" }
tauri-plugin-updater = "2"

[dev-dependencies]
tauri = { version = "2", features = ["test"] }