[package]
name = "as-inner-serializable"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde", "serde_json", "tokio"] }
serde = { version = "1", features = ["derive"] }