[package]
name = "extensions_loader"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
libloading = "0.8.6"
sha3 = "0.10.8"
minisign-verify = "0.2.3"
tauri = { version = "2" }
tracing = "0.1.41"
base64ct = { version = "1.6.0", features = ["std"] }

[dev-dependencies]
serde_json = "1.0.139"
tauri-utils = "2"
tauri = { version = "2", features = ["test"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }